Added/Removed styling from app, aboutme and project.

--- a/Sammys React Portfolio/src/Pages/AboutMe/AboutMe.css
+++ b/Sammys React Portfolio/src/Pages/AboutMe/AboutMe.css
@@ -8,7 +8,7 @@
     color: rgba(245, 245, 245, 0.017) !important;
 }
 
-#aboutMePrargraph {
+#aboutMeSection {
     font-weight: 350;
     background-color: rgba(250, 250, 210, 0.902);
     padding: 25px;
